--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,6 @@
-.btn--primary {
-	background-color: #ee1f70 !important;
+html,
+body {
+	font-family: 'Poppins', sans-serif;
+	font-weight: normal;
+	font-display: swap;
 }
